--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = "0.8.0"
 octocrab = "0.15"
 anyhow = "1.0.57"
 tokio = { version = "1.17.0", features = ["full"] }
 toml = "0.5.9"
 serde = "1.0.136"
 serde_derive = "1.0.136"
+clap = "3.1.12"
